# libsymusic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: deploy.yml
example/: hello.cpp  parse_midi.cpp
include/: symusic.h
include/symusic/: alias.h  batch_ops.h  container.h  conversion.h  event.h  mtype.h  note_arr.h  ops.h  repr.h  score.h  tag.h  track.h
include/symusic/format/: common.h  midi.h  zpp.h
include/symusic/inner/: container.h  conversion.h  io.h  zpp.h
include/symusic/io/: common.h  midi.h  zpp.h
src/: batch_ops.cpp  container.cpp  conversion.cpp  note_arr.cpp  repr.cpp  score.cpp  test.cpp  track.cpp  utils.cpp
src/format/: common.cpp  midi.cpp  zpp.cpp
src/io/: midi.cpp
